In process of building a database schema; Weighing decision on using SQL for storage; Figuring out sharing data among services

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rhizome",
   "version": "0.0.1",
-  "description": "Package to augment existing data collections !!! needs to be revisited",
+  "description": "Package to augment existing data collections !!! revise",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "homepage": "...?",
   "dependencies": {
     "simpl-schema": "0.8.3",
+    "json-schema": "0.2.3",
     "knex": "0.12.6",
     "lodash": "4.17.4",
     "bignumber.js": "4.0.0",
